umol-models-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@inorganic_small_hocn.snap
---
source: umol-models-graph/tests/resolution/mod.rs
expression: results
---
category: inorganic_small
atom_typing:
  success: true
  summary:
    atom_count: 4
    bond_count: 3
    topology: Cd
    atoms:
      - "H#v"
      - "O#n2#v2"
      - "C#v4"
      - "N#n#v3"
    bonds:
      - "-"
      - "-"
      - "#"
counts:
  success: true
  summary:
    atom_count: 4
    bond_count: 3
    topology: Cd
    atoms:
      - "H#v"
      - "O#n2#v2"
      - "C#v4"
      - "N#n#v3"
    bonds:
      - "-"
      - "-"
      - "#"
