umol-models-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@inorganic_small_hscn.snap
---
source: umol-models-graph/tests/resolution/mod.rs
expression: results
---
category: inorganic_small
atom_typing:
  success: false
  error:
    error_type: ValenceAmbiguous
    message: "Valence ambiguous for atom S at index 1 has 3 valence matches: {S/2v2}, {S/1v2a2}, {S+/1v2a1}"
counts:
  success: true
  summary:
    atom_count: 4
    bond_count: 3
    topology: Cd
    atoms:
      - "{Hv1}"
      - "{S/2v2}"
      - "{Cv4}"
      - "{N/1v3}"
    bonds:
      - "-"
      - "-"
      - "#"
