umol-models-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@inorganic_small_n2h2.snap
---
source: umol-models-graph/tests/resolution/mod.rs
expression: results
---
category: inorganic_small
atom_typing:
  success: true
  summary:
    atom_count: 4
    bond_count: 3
    topology: Cq
    atoms:
      - "N#n#v3"
      - "N#n#v3"
      - "H#v"
      - "H#v"
    bonds:
      - "="
      - "-"
      - "-"
counts:
  success: true
  summary:
    atom_count: 4
    bond_count: 3
    topology: Cq
    atoms:
      - "N#n#v3"
      - "N#n#v3"
      - "H#v"
      - "H#v"
    bonds:
      - "="
      - "-"
      - "-"
