umol-models-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@inorganic_small_n2h4.snap
---
source: umol-models-graph/tests/resolution/mod.rs
expression: edn_to_string(&results).unwrap()
---
{:atom-typing {:success true :output {:atoms {"0" "N#n#v3" "1" "N#n#v3" "2" "H#v" "3" "H#v" "4" "H#v" "5" "H#v"} :bonds [["0" "1" "1"] ["0" "2" "1"] ["0" "3" "1"] ["1" "4" "1"] ["1" "5" "1"]] :charge 0 :spin "#u0 #s1"}} :counts {:success true :output {:atoms {"0" "N#n#v3" "1" "N#n#v3" "2" "H#v" "3" "H#v" "4" "H#v" "5" "H#v"} :bonds [["0" "1" "1"] ["0" "2" "1"] ["0" "3" "1"] ["1" "4" "1"] ["1" "5" "1"]] :charge 0 :spin "#u0 #s1"}}}
