umol-models-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@inorganic_small_n2o3.snap
---
source: umol-models-graph/tests/resolution/mod.rs
expression: results
---
category: inorganic_small
atom_typing:
  success: true
  summary:
    atom_count: 5
    bond_count: 4
    topology: DaS
    atoms:
      - "O#n2#v2"
      - "N#n#v3"
      - "O#n2#v2"
      - "N#n#v3"
      - "O#n2#v2"
    bonds:
      - "="
      - "-"
      - "-"
      - "="
counts:
  success: true
  summary:
    atom_count: 5
    bond_count: 4
    topology: DaS
    atoms:
      - "O#n2#v2"
      - "N#n#v3"
      - "O#n2#v2"
      - "N#n#v3"
      - "O#n2#v2"
    bonds:
      - "="
      - "-"
      - "-"
      - "="
