umol-models-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@inorganic_small_n2o4.snap
---
source: umol-models-graph/tests/resolution/mod.rs
expression: results
---
category: inorganic_small
atom_typing:
  success: true
  summary:
    atom_count: 6
    bond_count: 5
    topology: "E`_o"
    atoms:
      - "O#n2#v2"
      - "N#c+#v4"
      - "O#c-#n3#v"
      - "N#c+#v4"
      - "O#c-#n3#v"
      - "O#n2#v2"
    bonds:
      - "="
      - "-"
      - "-"
      - "-"
      - "="
counts:
  success: true
  summary:
    atom_count: 6
    bond_count: 5
    topology: "E`_o"
    atoms:
      - "O#n2#v2"
      - "N#c+#v4"
      - "O#c-#n3#v"
      - "N#c+#v4"
      - "O#c-#n3#v"
      - "O#n2#v2"
    bonds:
      - "="
      - "-"
      - "-"
      - "-"
      - "="
