umol-models-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@inorganic_small_ncl3.snap
---
source: umol-models-graph/tests/resolution/mod.rs
expression: results
---
category: inorganic_small
atom_typing:
  success: false
  error:
    error_type: ValenceAmbiguous
    message: "Valence ambiguous for atom N at index 0 has 2 valence matches: {N/1v3}, {Nv3a2}"
counts:
  success: true
  summary:
    atom_count: 4
    bond_count: 3
    topology: Cw
    atoms:
      - "{N/1v3}"
      - "{Cl/3v1}"
      - "{Cl/3v1}"
      - "{Cl/3v1}"
    bonds:
      - "-"
      - "-"
      - "-"
